# docs/swagger.json
@@ -19,21 +19,6 @@
                 }
             }
         },
-        "/user": {
-            "get": {
-                "tags": [
-                    "用户"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "code\",\"message\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/user/createUser": {
             "get": {
                 "tags": [
@@ -133,6 +118,18 @@
                         "type": "string",
                         "description": "password",
                         "name": "password",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "email",
+                        "name": "email",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "phone",
+                        "name": "phone",
                         "in": "formData"
                     }
                 ],
